# symfem

./: ++version.py  .flake8  .gitignore  .readthedocs.yml  ADDING_AN_ELEMENT.md  CHANGELOG.md  CHANGELOG_SINCE_LAST_VERSION.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VERSION  codemeta.json  prepare_release.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update_readme.py
.github/: pull_request_template.md
demo/: basix_interface.py  custom_element.py  lagrange.py  nedelec.py  stiffness_matrix.py  test_demos.py
docs/: conf.py  index.rst
feast/: __init__.py  finite_element.py  functionals.py  polynomials.py  references.py  simplex.py  symbolic.py  tp.bak  tp.py  vectors.py
joss/: paper.bib  paper.md
logo/: draw.py
scripts/: draw_logo.py  draw_references.py  generate_gn.py  generate_gn_new.py  test_scripts.py
symfem/: __init__.py  basis_function.py  basis_functions.py  basix_interface.py  caching.py  calculus.py  create.py  finite_element.py  functionals.py  functions.py  geometry.py  legendre.py  mappings.py  moments.py  piecewise_functions.py  plotting.py  polynomials.py  quadrature.py  references.py  simplex.py  symbolic.py  symbols.py  tp.py  utils.py  vectors.py  version.py
test/: __init__.py  conftest.py  test_against_basix.py  test_against_computed_by_hand.py  test_against_libtab.py  test_alfeld_sorokina.py  test_all_elements.py  test_arnold_winther.py  test_bell.py  test_bernstein.py  test_caching.py  test_degrees.py  test_docs.py  test_dof_descriptions.py  test_elements.py  test_functions.py  (+22 more)
(+102 files in other folders)
